@@ -5,6 +5,7 @@ import com.booking.backend.entity.Organization;
 import com.booking.backend.mapper.OrganizationMapper;
 import com.booking.backend.repository.OrganizationRepository;
 import lombok.RequiredArgsConstructor;
+import org.mapstruct.factory.Mappers;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -15,8 +16,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@RequiredArgsConstructor
 @Service
+@RequiredArgsConstructor
 public class OrganizationServiceImpl implements OrganizationService {
 
     private final OrganizationRepository organizationRepository;
@@ -42,8 +43,8 @@ public class OrganizationServiceImpl implements OrganizationService {
         Page<Organization> pagedResult = organizationRepository.findAll(paging);
         if (pagedResult.hasContent()) {
             return pagedResult.getContent().stream()
-                    .map(organizationMapper::convertFromOrganizationToOrganizationDto)
-                    .collect(Collectors.toList());
+                    .map(organizationMapper::convert)
+                    .toList();
         } else {
             return new ArrayList<>();
         }
@@ -52,25 +53,25 @@ public class OrganizationServiceImpl implements OrganizationService {
     @Override
     public List<OrganizationDto> findAllByName(String name) {
         return organizationRepository.getAllByName(name).stream()
-                .map(organizationMapper::convertFromOrganizationToOrganizationDto)
-                .collect(Collectors.toList());
+                .map(organizationMapper::convert)
+                .toList();
     }
 
     @Override
     public List<OrganizationDto> getAll() {
         return organizationRepository.findAll().stream()
-                .map(organizationMapper::convertFromOrganizationToOrganizationDto)
-                .collect(Collectors.toList());
+                .map(organizationMapper::convert)
+                .toList();
     }
 
     @Override
     public void updateOrganization(OrganizationDto organizationDto) {
-        organizationRepository.save(organizationMapper.convertFromOrganizationDtoToOrganization(organizationDto));
+        organizationRepository.save(organizationMapper.convert(organizationDto));
     }
 
     @Override
     public OrganizationDto getById(Long id) {
-        return organizationMapper.convertFromOrganizationToOrganizationDto(organizationRepository.getById(id));
+        return organizationMapper.convert(organizationRepository.getById(id));
     }
 }
 
